<resources>
    <string name="app_name">Healing Zone</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="promt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="log_out">Log out</string>
    <string name="star">★</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="description">Description</string>

    <string name="Choose_proper_timeslot">Choose proper time slot</string>
    <string name="Please_select">Please select </string>
    <string name="hospitals">Hospitals</string>
    <string name="search">Search</string>
    <string name="appointments">Appointments</string>
    <string name="welcome">Welcome,</string>

</resources>
