<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/hospitals"
        android:title="@string/hospitals"
        app:showAsAction="never"/>

    <item
        android:id="@+id/appointments"
        android:title="@string/appointments"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nearby_hospitals"
        android:title="Nearby hospitals"
        app:showAsAction="never"/>

    <item
        android:id="@+id/log_out_menu_item"
        android:title="@string/log_out"
        app:showAsAction="never" />



</menu>