<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/appointment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/text_size_16" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/card_background">

            <LinearLayout
                android:id="@+id/appointment_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/card_background"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_setdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:hint="Select Appointment Date"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/text_size_16" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/calendar" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginTop="30dp"
            android:gravity="center|start"
            android:text="Select Time Slot for Appointment"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/appointment_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_settimeform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="@string/From"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_16" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/clock" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/appointment_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/appointment_to_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="@string/To"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_16" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/clock" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_task_fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/fab_send_icon"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        app:fabSize="auto"
        tools:targetApi="lollipop" />

</FrameLayout>